# fileAgent

./: .gitignore  LICENSE  README.md  config.example.yaml  install.sh  pyproject.toml
agents/: com.workspacemanager.downloadsorter.plist.template  com.workspacemanager.janitor.plist.template  com.workspacemanager.reporter.plist.template
src/workspace_manager/: __init__.py  cli.py  common.py  config.py  download_sorter.py  janitor.py  llm.py  reporter.py
state/: sort_since.txt
tests/: test_common.py
