[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "workspace-manager"
version = "0.1.0"
description = "Reproducible, LLM-driven macOS file-organization toolkit (janitor, download sorter, reporter)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "workspaceManager contributors" }]
keywords = ["macos", "files", "cleanup", "anthropic", "claude", "automation"]
dependencies = [
    "anthropic>=0.40",
    "PyYAML>=6.0",
    "pypdf>=4.0",        # first-page text extraction for PDFs
    "python-docx>=1.1",  # first-page text extraction for .docx
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
workspace-manager = "workspace_manager.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
